[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/menus/menuInGame/fundoTelaMaior.png" type="Texture" id=1]
[ext_resource path="res://sprites/personagem/grupo/rosto-ze.png" type="Texture" id=2]
[ext_resource path="res://fontes/FontesSalvas/fonteMenuInGame.tres" type="DynamicFont" id=3]
[ext_resource path="res://script/menus/MenuInGameEquipamentos.gd" type="Script" id=4]
[ext_resource path="res://sprites/ferramentas/setaAzul.png" type="Texture" id=5]
[ext_resource path="res://sprites/menus/imagensDiversas/iconesItensDesequipados/cabeca.png" type="Texture" id=6]
[ext_resource path="res://sprites/menus/imagensDiversas/iconesItensDesequipados/arma.png" type="Texture" id=7]
[ext_resource path="res://sprites/menus/imagensDiversas/iconesItensDesequipados/defesa.png" type="Texture" id=8]
[ext_resource path="res://sprites/menus/imagensDiversas/iconesItensDesequipados/corpo.png" type="Texture" id=9]
[ext_resource path="res://sprites/menus/imagensDiversas/iconesItensDesequipados/pes.png" type="Texture" id=10]
[ext_resource path="res://sprites/menus/imagensDiversas/iconesItensDesequipados/maos.png" type="Texture" id=11]
[ext_resource path="res://sprites/menus/imagensDiversas/iconesItensDesequipados/acessorio.png" type="Texture" id=12]
[ext_resource path="res://nodes/menus/MenuInGameEquipamentosListaItens.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 130, 220 )

[node name="MenuInGameEquipamentos" type="Node2D"]
script = ExtResource( 4 )

[node name="fundo" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="imagemPersonagem" type="Sprite" parent="."]
position = Vector2( -200, -170 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="cursor" type="Sprite" parent="."]
position = Vector2( 266, -166 )
rotation = 1.5708
scale = Vector2( 0.15, 0.2 )
texture = ExtResource( 5 )

[node name="AreaEquipamentos" type="Area2D" parent="."]
position = Vector2( 130, 28 )
rotation = -3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaEquipamentos"]
shape = SubResource( 1 )

[node name="Nome" type="Label" parent="."]
margin_left = -134.0
margin_top = -230.0
margin_right = 56.0
margin_bottom = -206.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Nome Personagem"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lv" type="Label" parent="."]
margin_left = -134.0
margin_top = -200.0
margin_right = 65.0
margin_bottom = -176.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Lv: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imagemCabeca" type="Sprite" parent="."]
position = Vector2( 20, -170 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="nomeItemCabeca" type="Label" parent="."]
margin_left = 50.0
margin_top = -180.0
margin_right = 262.0
margin_bottom = -156.0
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Equipamento Cabeca"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imagemDireita" type="Sprite" parent="."]
position = Vector2( 20, -125 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="nomeItemDireita" type="Label" parent="."]
margin_left = 50.0
margin_top = -135.0
margin_right = 262.0
margin_bottom = -111.0
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Equipamento Arma"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imagemEsquerda" type="Sprite" parent="."]
position = Vector2( 20, -80 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="nomeItemEsquerda" type="Label" parent="."]
margin_left = 50.0
margin_top = -90.0
margin_right = 262.0
margin_bottom = -66.0
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Equipamento Defesa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imagemMaos" type="Sprite" parent="."]
position = Vector2( 20, -35 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="nomeItemMaos" type="Label" parent="."]
margin_left = 50.0
margin_top = -45.337
margin_right = 262.0
margin_bottom = -21.337
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Equipamento Mãos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imagemCorpo" type="Sprite" parent="."]
position = Vector2( 20, 5 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="nomeItemCorpo" type="Label" parent="."]
margin_left = 50.0
margin_top = -5.0
margin_right = 262.0
margin_bottom = 19.0
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Equipamento Corpo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imagemPes" type="Sprite" parent="."]
position = Vector2( 20, 50 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="nomeItemPes" type="Label" parent="."]
margin_left = 50.0
margin_top = 40.0
margin_right = 262.0
margin_bottom = 64.0
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Equipamento Pés"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imagemAcessorio1" type="Sprite" parent="."]
position = Vector2( 20, 95 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 12 )

[node name="nomeItemAcessorio1" type="Label" parent="."]
margin_left = 50.0
margin_top = 85.0
margin_right = 298.0
margin_bottom = 109.0
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Equipamento Acessorio 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imagemAcessorio2" type="Sprite" parent="."]
position = Vector2( 20, 135 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 12 )

[node name="nomeItemAcessorio2" type="Label" parent="."]
margin_left = 50.0
margin_top = 125.0
margin_right = 303.0
margin_bottom = 149.0
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Equipamento Acessorio 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imagemAcessorio3" type="Sprite" parent="."]
position = Vector2( 20, 180 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 12 )

[node name="nomeItemAcessorio3" type="Label" parent="."]
margin_left = 50.0
margin_top = 170.0
margin_right = 303.0
margin_bottom = 194.0
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Equipamento Acessorio 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="imagemAcessorio4" type="Sprite" parent="."]
position = Vector2( 20, 225 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 12 )

[node name="nomeItemAcessorio4" type="Label" parent="."]
margin_left = 50.0
margin_top = 215.0
margin_right = 304.0
margin_bottom = 239.0
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Equipamento Acessorio 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuInGameEquipamentosListaItens" parent="." instance=ExtResource( 13 )]
position = Vector2( -130, 60 )
